<resources>
    <string name="app_name">NICESTART</string>
    <string name="money_icon">money_icon</string>
    <string name="go" translatable="false">GO</string>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="CANCEL" translatable="false">CANCEL</string>
    <string name="register">REGISTER</string>
    <string name="LOGIN" translatable="false">LOGIN</string>
    <string name="background_gradient">background_gradient</string>
    <string name="password2">"      Password"</string>
    <string name="username">"      Username"</string>
    <string name="email" translatable="false">"      Email"</string>
    <string name="phone" translatable="false">"      Phone"</string>
    <string name="profile" translatable="false">PROFILE</string>
    <string name="profile_name" translatable="false">Idlir Bregu</string>
    <string name="github" translatable="false">Sígueme en <a href="https://github.com/Idburg">GitHub</a></string>
    <string name="estudiante" translatable="false">Estudiante</string>
    <string name="nicestart" translatable="false">NICESTART</string>
    <string name="welcome" translatable="false">Welcome!</string>
    <string name="buenos_d_as" translatable="false">Buenos días</string>
    <string name="settings">Settings</string>
    <string name="copy" translatable="false">Copy</string>
    <string name="bottom_app_bar" translatable="false">Bottom app bar</string>
    <string name="bottom_navigation" translatable="false">Bottom navigation</string>
    <string name="signout" translatable="false">Signout</string>
</resources>