<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item2"
        android:title="@string/settings"
        app:showAsAction="never"
        >
        <menu>
            <item
                android:id="@+id/item3"
                android:title="@string/bottom_app_bar"
                app:showAsAction="never" />

            <item
                android:id="@+id/item4"
                android:title="@string/bottom_navigation"
                app:showAsAction="never" />


            <item
                android:id="@+id/item5"
                android:title="@string/signout"
                app:showAsAction="never"
                android:icon="@drawable/ic_door"/>
        </menu>
    </item>

    <item
        android:id="@+id/item1"
        android:title="@string/copy"
        app:showAsAction="ifRoom"
        >
    </item>
</menu>