<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.Login">

    <ImageView
        android:id="@+id/girl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_gradient"
        android:scaleType="fitStart"
        android:alpha="0.8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <!--android:src="@drawable/girl"-->

    <ImageView
        android:id="@+id/icon_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/money_icon"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@id/name"
        app:layout_constraintEnd_toEndOf="@id/guide2"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintTop_toTopOf="@id/main" />

    <Button
        android:id="@+id/login"
        style="@style/buttonFlat"
        android:text="@string/LOGIN"
        android:onClick="openMain"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/register"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="@id/guide2"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintTop_toBottomOf="@id/pass"
         />

    <Button
        android:id="@+id/register"
        android:text="@string/register"
        android:onClick="openSignup"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/guide2"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintTop_toBottomOf="@id/login"
        style="@style/buttonOutlined" />
<!--
    <Button
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="#0000FF"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintBottom_toBottomOf="@id/main"
        />
-->
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/guide1"
        app:layout_constraintGuide_percent="0.15"
        />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/guide2"
        app:layout_constraintGuide_percent="0.85"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="@id/guide2"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintTop_toBottomOf="@id/icon_img"
        app:startIconDrawable="@drawable/user_icon"
        >

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:background="@color/white"
            android:hint="@string/username" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guide2"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/key_icon">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:background="@color/white"
            android:hint="@string/password2"
            android:inputType="textPassword"
            android:maxLines="1"

            />


    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

