<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloMain"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/profile"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/guide2"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintTop_toTopOf="@id/main"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/profile"
        app:lottie_rawRes="@raw/user_anim"
        app:lottie_autoPlay="true"
        app:layout_constraintEnd_toStartOf="@id/guide2"
        app:layout_constraintStart_toEndOf="@id/guide1"
        app:layout_constraintTop_toBottomOf="@+id/tituloMain"

    />
    <TextView
        android:id="@+id/nombrePerfil"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile_name"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/guide2"
        app:layout_constraintStart_toStartOf="@id/guide1"
        app:layout_constraintTop_toBottomOf="@id/profile"
        />

    <TextView
        android:id="@+id/personState"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/estudiante"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/guide2"
        app:layout_constraintStart_toEndOf="@id/guide1"
        app:layout_constraintTop_toBottomOf="@id/nombrePerfil"
        />

    <TextView
        android:id="@+id/profileContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/github"
        android:textAlignment="center"
        android:linksClickable="true"
        android:textColorLink="#00F"
        app:layout_constraintEnd_toStartOf="@id/guide2"
        app:layout_constraintStart_toEndOf="@id/guide1"
        app:layout_constraintTop_toBottomOf="@id/personState"
        />

    <EditText
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="aqui se mostrará el código"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.575" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="pulsa para escanear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.667" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/guide1"
        app:layout_constraintGuide_percent="0.15"
        />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/guide2"
        app:layout_constraintGuide_percent="0.85"
        />
</androidx.constraintlayout.widget.ConstraintLayout>